--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         hibernateVersion = "5.2.17.Final"
         slf4jVersion = "1.7.25"
         junitVersion = "4.12"
+        mysqlVersion= "5.1.40"
     }
 
     repositories {
@@ -15,6 +16,8 @@ buildscript {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
     }
 }
+
+
 
 task dependenciesGraphDot {
 
