--- a/applications/album-service/src/main/resources/application.yml
+++ b/applications/album-service/src/main/resources/application.yml
@@ -19,6 +19,6 @@ logging.level:
   org.superbiz.moviefun: DEBUG
 
 s3:
-  accessKey: <access key id>
-  secretKey: <secret access key>
-  bucketName: <name of the bucket>
+  accessKey: AKIAJQTUFHPLLNDIBCWQ
+  secretKey: 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
+  bucketName: student-artifacts-bangalore-13
