--- a/applications/movie-fun-app/src/main/resources/application.yml
+++ b/applications/movie-fun-app/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
   application:
     name: movie-fun-app
@@ -11,9 +12,9 @@ logging.level:
   org.superbiz.moviefun: DEBUG
 
 s3:
-  accessKey: <access key id>
-  secretKey: <secret access key>
-  bucketName: <name of the bucket>
+  accessKey: AKIAJQTUFHPLLNDIBCWQ
+  secretKey: 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
+  bucketName: student-artifacts-bangalore-13
 
 albums:
   url: //album-service/albums
