--- a/manifest.yml
+++ b/manifest.yml
@@ -3,7 +3,7 @@ applications:
 - name: album-service
   path: applications/album-service/build/libs/album-service-1.1.0-SNAPSHOT.jar
   routes:
-    - route: album-service-{UNIQUE_IDENTIFIER}.apps.chicken.pal.pivotal.io
+    - route: album-service-ravi.cfapps.io
   services:
   - album-database
   - photo-storage
@@ -14,7 +14,7 @@ applications:
 - name: movie-service
   path: applications/movie-service/build/libs/movie-service-1.1.0-SNAPSHOT.jar
   routes:
-    - route: movie-service-{UNIQUE_IDENTIFIER}.apps.chicken.pal.pivotal.io
+    - route: movie-service-ravi.cfapps.io
   services:
   - movie-database
   - movie-fun-sso
@@ -24,10 +24,11 @@ applications:
 - name: movie-fun-app
   path: applications/movie-fun-app/build/libs/movie-fun-app-1.1.0-SNAPSHOT.war
   routes:
-    - route: movie-fun-app-{UNIQUE_IDENTIFIER}.apps.chicken.pal.pivotal.io
+    - route: movie-fun-app-ravi.cfapps.io
   services:
   - photo-storage
   - movie-fun-sso
   - movie-fun-registry
+  - movie-fun-config-server
   env:
     GRANT_TYPE: authorization_code
